kube/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: earthquakes-ui
  labels:
    app: earthquakes-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: earthquakes-ui
  template:
    metadata:
      labels:
        app: earthquakes-ui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - name: earthquakes-ui
          image: 482950873045.dkr.ecr.us-east-2.amazonaws.com/jcallow-sandbox/earthquake:latest
          ports:
            - containerPort: 8080
