kube/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: earthquakes-ui-service
  namespace: earthquakes
  # annotations:
  #   external-dns.alpha.kubernetes.io/hostname: jcallow-projects.com
spec:
  type: NodePort
  selector:
    app: earthquakes-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
